--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <!--
+  Ejercicio nro 1. NG FOR / NG IF
   - Ocultar app-loading despues de 2000ms (2s) (simulando un fake loading) utilizando *ngIf y en su lugar mostrar la tabla de usuarios.
   - Completar el contenido del tbody de la tabla de usuarios utilizando *ngFor
+-->
+
+<!--
+  Ejercicio nro 2. NG CLASS & PIPE DE FECHA
+  - El modelo de Usuario (ver carpeta models/usuario.model.ts) tiene una propiedad isTop10, si esa propiedad es true
+  pintar la fila de la tabla aplicando la clase 'table-success'
+  - Formatear la fecha de nacimiento utilizando el pipe date https://angular.io/api/common/DatePipe
 -->
 
 <app-loading></app-loading>
@@ -16,6 +24,7 @@
         <th>Nombre completo</th> <!-- Ojo aqui, nombre COMPLETO-->
         <th>E-mail</th>
         <th>Edad</th>
+        <th>Fecha de nacimiento</th>
       </tr>
     </thead>
     <tbody>
